--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta name="viewport" content="width=550, initial-scale=1">
 
     <link rel="stylesheet" href="demo.css">
-    <link rel="stylesheet" href="../dist/jquery.flipster.min.css">
+    <link rel="stylesheet" href="dist/jquery.flipster.min.css">
 
     <script src="jquery.min.js"></script>
-    <script src="../dist/jquery.flipster.min.js"></script>
-    <link rel="icon" href="../demo/img/sp logo.png" type="image/x-icon">
+    <script src="dist/jquery.flipster.min.js"></script>
+    <link rel="icon" href="demo/img/sp logo.png" type="image/x-icon">
 </head>
 
 <body style="padding-top: 0%;">
@@ -49,13 +49,13 @@ overflow: hidden;">
 
                 <li data-flip-title="Web" data-flip-category="CSE - IT">
                     <h3>Web Development</h3>
-                    <a href="../redirect/src/webdev.html"> <img src="img/webp1.png"></a>
+                    <a href="redirect/src/webdev.html"> <img src="img/webp1.png"></a>
                 </li>
 
 
                 <li data-flip-title="Flutter" data-flip-category="CSE - IT">
                     <h3>Android + ISO</h3>
-                    <a href="../redirect/src/flutter.html"><img src="img/Flutter.png">
+                    <a href="redirect/src/flutter.html"><img src="img/Flutter.png">
 
                     </a>
                 </li>
@@ -63,7 +63,7 @@ overflow: hidden;">
 
                 <li data-flip-title="ReactNative" data-flip-category="CSE - IT">
                     <h3>React Native</h3>
-                    <a href="../redirect/src/reactNat.html"><img src="img/Reactnative.png"></a>
+                    <a href="redirect/src/reactNat.html"><img src="img/Reactnative.png"></a>
                 </li>
 
 
@@ -71,20 +71,20 @@ overflow: hidden;">
 
                 <li data-flip-title="Rpa" data-flip-category="CSE - IT">
                     <h3>Robotic process automation</h3>
-                    <a href="../redirect/src/rpa.html"><img src="img/Rpa.png"></a>
+                    <a href="redirect/src/rpa.html"><img src="img/Rpa.png"></a>
                 </li>
 
 
                 <li data-flip-title="Angular" data-flip-category="CSE - IT">
                     <h3>Angular</h3>
-                    <a href="../redirect/src/angular.html"> <img src="img/Angular.png"></a>
+                    <a href="redirect/src/angular.html"> <img src="img/Angular.png"></a>
                 </li>
 
                 <li data-flip-title="Chitti Bot" data-flip-category="ECE">
-                    <a href="../redirect/src/chitti.html"><img src="img/ChittiBot.png"></a>
+                    <a href="redirect/src/chitti.html"><img src="img/ChittiBot.png"></a>
                 </li>
                 <li data-flip-title="Moving Dustbin" data-flip-category="ECE">
-                    <a href="../redirect/src/movingDustbin.html"><img src="img/Dustbin.png"></a>
+                    <a href="redirect/src/movingDustbin.html"><img src="img/Dustbin.png"></a>
                 </li>
 
 
@@ -92,7 +92,7 @@ overflow: hidden;">
 
 
                 <li data-flip-title="Table Bot" data-flip-category="ECE">
-                    <a href="../redirect/src/tableBot.html"><img src="img/table bot.png"></a>
+                    <a href="redirect/src/tableBot.html"><img src="img/table bot.png"></a>
                 </li>
 
 
